--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
+    <script src="https://kit.fontawesome.com/b6e71eb567.js" crossorigin="anonymous"></script>
 </head>
 <body>
     <section id="container">
@@ -24,55 +25,123 @@
             </ul>
         </header>
         <section id="landing_section">
-            <img src="img/Justice.jpg" alt="justice_image" id="justice_image">
+            <img src="img/Justice.jpg" class="justice_image" alt="justice_image">
             <div id="overlay">
                 <h2>Bare Eagler Attorneys</h2>
                 <h5>A 100% black female owned boutique law firm</h5>
             </div>
         </section>
         <section class="services">
-            <div id="services_title">
+            <div class="title">
                 <h2>Our <br><span class="color">Services</span></h2>
-                <img src="img/BEA.jpg" alt="logo">
+                <img src="img/BEA.jpg" class="bea-image" alt="bea-image">
             </div>
             <div class="services_body">
                 <dl>
                     <dt>COMMERCIAL LAW</dt>
                     <p>
-                        <dd>Expertise in business-related legal matters, including the drafting, vetting and interpretation of contracts.</dd>
+                        <dd>Expertise in business-related legal matters, including contracts, business formations, and commercial litigation.</dd>
                     </p>
                 </dl>
                 <dl>
-                    <dt>COMMERCIAL LAW</dt>
+                    <dt>LEGAL OPINIONS</dt>
                     <p>
-                        <dd>Expertise in business-related legal matters, including the drafting, vetting and interpretation of contracts.</dd>
+                        <dd>Providing well-researched and comprehensive legal opinions tailored to the unique needs of clients.</dd>
                     </p>
                 </dl>
                 <dl>
-                    <dt>COMMERCIAL LAW</dt>
+                    <dt>EMPLOYMENT AND LABOUR LAW</dt>
                     <p>
-                        <dd>Expertise in business-related legal matters, including the drafting, vetting and interpretation of contracts.</dd>
+                        <dd>Comprehensive solutions for both employers and employees, covering employment contracts, labour relations, and dispute resolution.</dd>
                     </p>
                 </dl>
                 <dl>
-                    <dt>COMMERCIAL LAW</dt>
+                    <dt>WILLS AND DECEASED ESTATES</dt>
                     <p>
-                        <dd>Expertise in business-related legal matters, including the drafting, vetting and interpretation of contracts.</dd>
+                        <dd>Services encompassing estate planning, intestate succession, and legal strategies for effective estate administration.</dd>
                     </p>
                 </dl>
                 <dl>
-                    <dt>COMMERCIAL LAW</dt>
+                    <dt>CONSTRUCTION AND ENGINEERING LAW</dt>
                     <p>
-                        <dd>Expertise in business-related legal matters, including the drafting, vetting and interpretation of contracts.</dd>
+                        <dd>Specialised legal support for the construction industry, including contract negotiation, regulatory compliance, and dispute resolution.</dd>
                     </p>
                 </dl>
                 <dl>
-                    <dt>COMMERCIAL LAW</dt>
+                    <dt>CONTRACT ADMINISTRATION</dt>
                     <p>
-                        <dd>Expertise in business-related legal matters, including the drafting, vetting and interpretation of contracts.</dd>
+                        <dd>Expertise in overseeing contracts throughout their lifecycle, ensuring legal compliance and effective execution.</dd>
                     </p>
                 </dl>
+                <button class="read-more">READ MORE &#8594</button><br>
             </div>
+        </section>
+        <section class="about">
+            <img src="img/hammer2.jpg" class="justice_image" alt="justice-hammer-image">
+            <div class="title" id="about_title">
+                <h2>About <br><span class="color">Us</span></h2>
+                <img src="img/BEA.jpg" class="bea-image" alt="justice-hammer-image">
+            </div>
+            <section class="about_body">
+                <h1>Who we are</h1>
+                <p>We are a 100% black female owned boutique law firm headquartered in Johannesburg, South Africa.<br><br>We are led by Eagler Bare, a duly experienced and admitted attorney of the High Court of South Africa supported by seasoned legal consultants with over a decade of experience for in-depth insights and effective solutions.</p>
+                <h1>Our values</h1>
+                <p>Client-Centricity, Integrity, Collaboration and Excellence</p>
+                <h1>Our mission</h1>
+                <p>We are centred around our clients and guided by unwavering integrity as we provide unparalleled legal services through timely, effective, and ethical legal solutions, navigating our clients and the community towards excellence.</p>
+                <h1>Our legal strategies</h1>
+                <ul class="strategies">
+                    <li>Proactive contract management, dispute resolution, and strategic legal counsel.</li>
+                    <li>Employee-focused policies, dispute prevention, and tailored legal solutions for employers.</li>
+                    <li>Rigorous compliance checks, risk management, and innovative dispute resolution strategies.</li>
+                    <li>Staying Updated: Continuous legal education, subscriptions to legal publications, and participation in industry conferences.</li>
+                </ul>
+                <button class="read-more" id="about_read-more">READ MORE &#8594</button><br>
+            </section>
+            <section class="people">
+                <div class="title">
+                    <h2>Our <br><span class="color">People</span></h2>
+                    <img src="img/BEA.jpg" class="bea-image" alt="justice-hammer-image">
+                </div>
+                <figure>
+                    <h1>Founder & Principal Attorney</h1>
+                    <img src="img/Eagler.jpg" id="eagler" alt="Eagler-image">
+                    <figcaption>Eagler Bare</figcaption>
+                </figure>
+                <section class="people_body">
+                    <p>
+                        Welcome to the distinguished legal world of Eagler Bare, an accomplished attorney with a commitment to excellence and an unwavering passion for the intricacies of the law.<br><br>
+                        In 2016, Eagler Bare graduated with a Bachelor of Laws (LLB) from the University of South Africa. In 2017, she was admitted as an attorney of the High Court of South Africa, marking the inception of a legal journey characterized by diligence, expertise, and an unwavering commitment to the principles of justice. <br><br>Her pursuit of legal mastery led her to the University of Johannesburg, where she attained a Master of Laws degree (LLM) in 2021, cementing her dedication to continuous intellectual growth. Additionally, she holds a certificate in Compliance Management from the esteemed University of Cape Town.<br>
+
+                        <!-- Her post-admission years have been marked by invaluable experiences that have sharpened her skills and deepened her understanding of the legal landscape.  Her legal acumen has been honed through years of specializing in the intricate fields of commercial law, employment law and construction law.  In the dynamic realm of commercial law, she has navigated complex transactions and provided strategic counsel to businesses. In employment law, she has assisted in reviewing and drafting employment contracts and representing clients in cases of unjust dismissal, wrongful termination, and employment-related disputes.  The domain of construction law has seen her adept negotiation skills, ensuring the seamless execution of contracts and regulatory compliance.
+                        At the heart of her legal practice is an unwavering commitment to excellence. She approaches each case with meticulous attention to detail, strategic thinking, and a passion for achieving optimal outcomes for her clients.
+                        In embracing the ethos of lifelong learning, she stays at the forefront of legal developments, ensuring that her clients benefit from the latest insights, strategies, and innovative legal solutions.
+                        As the Founder and Principal Attorney of Eagler Bare Attorneys, she is dedicated to providing unparalleled legal services, guided by principles of integrity, excellence, and client-centricity.
+                        Welcome to a legal experience that transcends the ordinary. -->
+                    </p>
+                    <button class="read-more" id="people_read-more">READ MORE &#8594</button><br>
+                </section>
+                <section class="contact">
+                    <div class="title">
+                        <h2>Contact <br><span class="color">Us</span></h2>
+                        <img src="img/BEA.jpg" class="bea-image" alt="justice-hammer-image">
+                    </div>
+                    <section class="contact_body">
+                        <h1 style="font-size: 1em;">Reach us on</h1>
+                        <p><i class="fa-solid fa-phone"></i><span class="space">+27 83 208 1665</span></p>
+                        <p><i class="fa-solid fa-envelope"></i><span class="space">info@ebattorneys.co.za </span></p>
+                        <p><i class="fa-solid fa-envelope"></i><span class="space">eagler@ebattorneys.co.za</span></p>
+                    </section>
+                    <section class="socials">
+                        <div class="social_icons">
+                            <i class="fa-brands fa-facebook"></i>
+                            <i class="fa-brands fa-linkedin"></i>
+                            <i class="fa-brands fa-x-twitter"></i>
+                            <i class="fa-brands fa-instagram"></i>
+                        </div>
+                    </section><br><br>
+                </section>
+            </section>
         </section>
         <footer>Copyright @ 2023. All rights reserved.</footer>
     </section>
