--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
                             <i class="fa-brands fa-x-twitter"></i>
                             <i class="fa-brands fa-instagram"></i>
                         </div>
-                    </section><br><br>
+                    </section><br><br><br>
                 </section>
             </section>
         </section>
