Minor grammar fixes

--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
                 <h1>Who we are</h1>
                 <p>We are a 100% black female owned boutique law firm headquartered in Johannesburg, South Africa.<br><br>We are led by Eagler Bare, a duly experienced and admitted attorney of the High Court of South Africa supported by seasoned legal consultants with over a decade of experience for in-depth insights and effective solutions.</p>
                 <h1>Our values</h1>
-                <p>Client-Centricity, Integrity, Collaboration and Excellence</p>
+                <p>Client-Centricity, Integrity, Collaboration and Excellence.</p>
                 <h1>Our mission</h1>
                 <p>We are centred around our clients and guided by unwavering integrity as we provide unparalleled legal services through timely, effective, and ethical legal solutions, navigating our clients and the community towards excellence.</p>
                 <h1>Our legal strategies</h1>
