Fixed text typo

--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
             </div>
             <section class="about_body">
                 <h1>Who we are</h1>
-                <p>Bare Eagler Attorneys (BEA) is 100% black female owned boutique law firm headquartered in Johannesburg, South Africa.<br><br>The firm is led by Eagler Bare, a duly experienced and admitted attorney of the High Court of South Africa supported by seasoned legal consultants with over a decade of experience for in-depth insights and effective solutions.</p>
+                <p>Bare Eagler Attorneys (BEA) is a 100% black female owned boutique law firm headquartered in Johannesburg, South Africa.<br><br>The firm is led by Eagler Bare, a duly experienced and admitted attorney of the High Court of South Africa supported by seasoned legal consultants with over a decade of experience for in-depth insights and effective solutions.</p>
                 <h1>Our values</h1>
                 <p>Client-Centricity, Integrity, Collaboration and Excellence.</p>
                 <h1>Our mission</h1>
