--- a/index.html
+++ b/index.html
@@ -73,7 +73,85 @@
                         <dd>Expertise in overseeing contracts throughout their lifecycle, ensuring legal compliance and effective execution.</dd>
                     </p>
                 </dl>
-                <button class="read-more">READ MORE &#8594</button><br>
+                <button class="read-more">READ MORE &#8594</button>
+                <div id="specialisation">
+                    <h1>SPECIALISATION & FOCUS</h1>
+                    <p>Employment and Labour Law</p>
+                    <ul>
+                        <li>Employee Rights: Addressing issues related to wages, working hours, discrimination, harassment, and workplace safety.</li>
+                        <li>Employment Contracts: Drafting and reviewing employment contracts to ensure legal compliance and protection of both employers and employees.</li>
+                        <li>Labour Relations: Handling matters related to unions, collective bargaining, and disputes between employers and labour organizations.</li>
+                        <li>Wrongful Termination: Representing clients in cases of unjust dismissal, wrongful termination, and employment-related disputes.</li>
+                    </ul>
+                    <p>Commercial Law</p>
+                    <ul>
+                        <li>Contracts: Drafting, reviewing, and negotiating contracts for various business transactions, including sales, partnerships, and service agreements.</li>
+                        <li>Business Formation: Assisting in the formation of business entities, such as corporations, partnerships, and limited liability companies.</li>
+                        <li>Commercial Litigation: Handling disputes arising from commercial transactions, including breach of contract, fraud, and other business-related conflicts.</li>
+                    </ul>
+                    <p>Construction Law</p>
+                    <ul>
+                        <li>Contract Negotiation: Assisting in the negotiation and drafting of construction contracts, including those between owners, contractors, and subcontractors.</li>
+                        <li>Regulatory Compliance: Ensuring compliance with applicable laws and regulations governing construction projects.</li>
+                        <li>Dispute Resolution: Handling disputes that may arise during the construction process, including delays, defects, and payment issues.</li>
+                        <li>Construction Defects: Addressing legal matters related to construction defects, warranties, and liability for faulty workmanship.</li>
+                    </ul>
+                    <p>Wills & Deceased Estates</p>
+                    <ul>
+                        <li>Estate Planning: Drafting Wills: Preparing legal documents that outline the distribution of a person's assets and the appointment of guardianship for minor children.</li>
+                        <li>Trusts: Establishing trusts to manage and distribute assets according to the wishes of the deceased.</li>
+                        <li>Estate Administration: Assisting in the legal process of validating a Will and administering the estate.</li>
+                        <li>Handling the practical aspects of distributing assets, paying debts, and resolving claims against the estate.</li>
+                        <li>Intestate Succession: Advising on the distribution of assets when a person passes away without a valid Will, in accordance with the laws of intestate succession.</li>
+                    </ul>
+                    <p>Contract Administration</p>
+                    <span>Contract administration a multifaceted and crucial aspect of business operations.  It involves the management and oversight of contracts throughout their lifecycle, from creation to completion. It is a critical aspect of ensuring that contractual agreements are executed efficiently, legally, and in a manner that aligns with the interests of all parties involved.<br><br>Bare Eagler Attorneys can help you with effective contract administration in order for your business to maintain positive relationships and minimize the potential for disputes. <br><br>We pay attention to detail and have a thorough understanding of legal and business considerations.<br><br>Our tailored contract administration involves:<br><br></span>
+                    <p>Contract Creation :</p>
+                    <ul>
+                        <li>Drafting - The initial creation of a contract, which involves clearly articulated the terms, conditions, and obligations of each party. This phase requires careful consideration of legal requirements and potential risks.</li>
+                    </ul>
+                    <p>Negotiation :</p>
+                    <ul>
+                        <li>Review and Amendments: Parties may propose changes to the initial draft. We facilitate these discussions, ensuring that modifications align with the interests of all parties.</li>
+                    </ul>
+                    <p>Execution :</p>
+                    <ul>
+                        <li>Signing and Authorization: Once both parties agree to the terms, the contract is signed and authorized. We ensure that all required signatures are obtained.</li>
+                    </ul>
+                    <p>Record Keeping :</p>
+                    <ul>
+                        <li>Document Management: We maintain a comprehensive record of all contracts, including versions, amendments, and related correspondence. This ensures easy access to information and helps in monitoring compliance.</li>
+                    </ul>
+                    <p>Communication :</p>
+                    <ul>
+                        <li>Stakeholder Communication: We facilitate communication between involved parties, ensuring that everyone is aware of their responsibilities and any changes to the agreement.</li>
+                    </ul>
+                    <p>Compliance Monitoring :</p>
+                    <ul>
+                        <li>Ongoing Oversight: Throughout the contract's duration, we monitor compliance with the terms and conditions outlined in the agreement. This includes tracking deadlines, deliverables, and performance metrics.</li>
+                    </ul>
+                    <p>Issue Resolution :</p>
+                    <ul>
+                        <li>Conflict Resolution: We address any issues or disputes that may arise during the execution of the contract. This involves finding solutions that align with the terms of the agreement.</li>
+                    </ul>
+                    <p>Performance Evaluation :</p>
+                    <ul>
+                        <li>Assessment of Deliverables: we can assist with evaluating the quality and timeliness of deliverables and services provided under the contract. This assessment informs our clients of future decisions and potential renewals.</li>
+                    </ul>
+                    <p>Contract Amendments :</p>
+                    <ul>
+                        <li>Changes to the Agreement: If circumstances change, we can facilitate amendments to the contract to reflect the new reality while protecting the interests of all parties.</li>
+                    </ul>
+                    <p>Contract Closeout :</p>
+                    <ul>
+                        <li>Finalisation: Once all obligations are met, we can assist in overseeing the formal closure of the contract. This includes ensuring that all deliverables are received, payments are made, and any required documentation is completed.</li>
+                    </ul>
+                    <p>Risk Management :</p>
+                    <ul>
+                        <li>Identification and Mitigation: We actively identify and address potential risks associated with a contract. This involves implementing strategies to mitigate risks and ensure that the contract remains legally and operationally sound.</li>
+                    </ul>
+                    <button class="read-more">&#8592 SEE LESS</button>
+                </div>
             </div>
         </section>
         <section class="about">
@@ -84,19 +162,12 @@
             </div>
             <section class="about_body">
                 <h1>Who we are</h1>
-                <p>Bare Eagler Attorneys (BEA) is a 100% black female owned boutique law firm headquartered in Johannesburg, South Africa.<br><br>The firm is led by Eagler Bare, a duly experienced and admitted attorney of the High Court of South Africa supported by seasoned legal consultants with over a decade of experience for in-depth insights and effective solutions.</p>
+                <p>
+                    Bare Eagler Attorneys (BEA) is a 100% black female owned boutique law firm headquartered in Johannesburg, South Africa.<br><br>The firm is led by Eagler Bare, a duly experienced and admitted attorney of the High Court of South Africa who is supported by seasoned legal consultants with over a decade of experience for in-depth insights and effective solutions.</p>
                 <h1>Our values</h1>
                 <p>Client-Centricity, Integrity, Collaboration and Excellence.</p>
                 <h1>Our mission</h1>
-                <p>We are centred around our clients and guided by unwavering integrity as we provide unparalleled legal services through timely, effective, and ethical legal solutions, navigating our clients and the community towards excellence.</p>
-                <h1>Our legal strategies</h1>
-                <ul class="strategies">
-                    <li>Proactive contract management, dispute resolution, and strategic legal counsel.</li>
-                    <li>Employee-focused policies, dispute prevention, and tailored legal solutions for employers.</li>
-                    <li>Rigorous compliance checks, risk management, and innovative dispute resolution strategies.</li>
-                    <li>Staying Updated: Continuous legal education, subscriptions to legal publications, and participation in industry conferences.</li>
-                </ul>
-                <button class="read-more" id="about_read-more">READ MORE &#8594</button><br>
+                <p>BEA is centered around its clients and guided by its unwavering integrity to provide unparalleled legal services through timely, effective, and ethical legal solutions. At the heart of BEA's legal practice is an unwavering commitment to excellence. Each case is approached with meticulous attention to detail, strategic thinking, and a passion for achieving optimal outcomes for clients.</p>
             </section>
             <section class="people">
                 <div class="title">
@@ -110,14 +181,14 @@
                 </figure>
                 <section class="people_body">
                     <p>
-                        Welcome to the distinguished legal world of Eagler Bare, an accomplished attorney with a commitment to excellence and an unwavering passion for the intricacies of the law.<br><br>
-                        In 2016, Eagler Bare graduated with a Bachelor of Laws (LLB) from the University of South Africa. In 2017, she was admitted as an attorney of the High Court of South Africa, marking the inception of a legal journey characterized by diligence, expertise, and an unwavering commitment to the principles of justice. <br><br>Her pursuit of legal mastery led her to the University of Johannesburg, where she attained a Master of Laws degree (LLM) in 2021, cementing her dedication to continuous intellectual growth. Additionally, she holds a certificate in Compliance Management from the esteemed University of Cape Town.<br>
-
-                        <!-- Her post-admission years have been marked by invaluable experiences that have sharpened her skills and deepened her understanding of the legal landscape.  Her legal acumen has been honed through years of specializing in the intricate fields of commercial law, employment law and construction law.  In the dynamic realm of commercial law, she has navigated complex transactions and provided strategic counsel to businesses. In employment law, she has assisted in reviewing and drafting employment contracts and representing clients in cases of unjust dismissal, wrongful termination, and employment-related disputes.  The domain of construction law has seen her adept negotiation skills, ensuring the seamless execution of contracts and regulatory compliance.
-                        At the heart of her legal practice is an unwavering commitment to excellence. She approaches each case with meticulous attention to detail, strategic thinking, and a passion for achieving optimal outcomes for her clients.
-                        In embracing the ethos of lifelong learning, she stays at the forefront of legal developments, ensuring that her clients benefit from the latest insights, strategies, and innovative legal solutions.
-                        As the Founder and Principal Attorney of Eagler Bare Attorneys, she is dedicated to providing unparalleled legal services, guided by principles of integrity, excellence, and client-centricity.
-                        Welcome to a legal experience that transcends the ordinary. -->
+                        Eagler Bare, is an accomplished attorney with a commitment to excellence and an unwavering passion for the intricacies of the law.<br><br>
+                        She graduated in 2016 with a Bachelor of Laws (LLB) from the University of South Africa. She was then admitted as an attorney of the High Court of South Africa in 2017, marking the inception of a legal journey characterised by diligence, expertise, and a resolute commitment to the principles of justice.<br><br>
+                        Her pursuit of legal mastery led her to the University of Johannesburg, where she attained a Master of Laws degree (LLM) in Drafting and Interpretation of Contracts in 2021, cementing her dedication to continuous intellectual growth. Additionally, she holds a certificate in Compliance Management from the esteemed University of Cape Town.
+                    </p>
+                    <p id="more_eagler">
+                        <!-- Her post-admission years have been marked by invaluable experiences that have sharpened her skills and deepened her understanding of the legal landscape.  Her legal acumen has been honed through years of specialising in the intricate fields of commercial law, employment law and construction & engineering law.<br><br>
+                        In the dynamic realm of commercial law, she has navigated complex transactions and provided strategic counsel to businesses. In employment law, she has assisted in reviewing and drafting employment contracts and representing clients in cases of unjust dismissal, wrongful termination, and employment-related disputes.  The domain of construction & engineering law has seen her adept negotiation skills, ensuring the seamless execution of contracts and regulatory compliance.<br><br>
+                        In embracing the ethos of lifelong learning, she stays at the forefront of legal developments, ensuring that her clients benefit from the latest insights, strategies, and innovative legal solutions.  As the Founder and Principal Attorney of Bare Eagler Attorneys, she is dedicated to providing unparalleled legal services, guided by principles of integrity, excellence, and client-centricity. -->
                     </p>
                     <button class="read-more" id="people_read-more">READ MORE &#8594</button><br>
                 </section>
@@ -139,9 +210,17 @@
                             <i class="fa-brands fa-x-twitter"></i>
                             <i class="fa-brands fa-instagram"></i>
                         </div>
-                    </section><br><br><br>
+                    </section><br><br>
                 </section>
             </section>
+            <nav>
+                <span id="close">X</span>
+                <li>HOME</li>
+                <li>SERVICES</li>
+                <li>VISION</li>
+                <li>PEOPLE</li>
+                <li>CONTACT</li>
+            </nav>
         </section>
         <footer>Copyright @ 2023. All rights reserved.</footer>
     </section>
