--- a/index.html
+++ b/index.html
@@ -16,13 +16,14 @@
         <header>
             <img src="img/BEA.png" alt="logo" id="logo">
             <span class="material-symbols-outlined" id="menu">menu</span>
-            <ul id="menu">
+            <nav id="nav">
+                <span id="close">X</span>
                 <li>HOME</li>
                 <li>SERVICES</li>
                 <li>VISION</li>
                 <li>PEOPLE</li>
                 <li>CONTACT</li>
-            </ul>
+            </nav>
         </header>
         <section id="landing_section">
             <img src="img/Justice.jpg" class="justice_image" alt="justice_image">
@@ -73,7 +74,7 @@
                         <dd>Expertise in overseeing contracts throughout their lifecycle, ensuring legal compliance and effective execution.</dd>
                     </p>
                 </dl>
-                <button class="read-more">READ MORE &#8594</button>
+                <button class="read-more" id="more-services">READ MORE &#8594</button>
                 <div id="specialisation">
                     <h1>SPECIALISATION & FOCUS</h1>
                     <p>Employment and Labour Law</p>
@@ -150,7 +151,7 @@
                     <ul>
                         <li>Identification and Mitigation: We actively identify and address potential risks associated with a contract. This involves implementing strategies to mitigate risks and ensure that the contract remains legally and operationally sound.</li>
                     </ul>
-                    <button class="read-more">&#8592 SEE LESS</button>
+                    <button class="read-more" id="less-services">&#8592 SEE LESS</button>
                 </div>
             </div>
         </section>
@@ -186,9 +187,9 @@
                         Her pursuit of legal mastery led her to the University of Johannesburg, where she attained a Master of Laws degree (LLM) in Drafting and Interpretation of Contracts in 2021, cementing her dedication to continuous intellectual growth. Additionally, she holds a certificate in Compliance Management from the esteemed University of Cape Town.
                     </p>
                     <p id="more_eagler">
-                        <!-- Her post-admission years have been marked by invaluable experiences that have sharpened her skills and deepened her understanding of the legal landscape.  Her legal acumen has been honed through years of specialising in the intricate fields of commercial law, employment law and construction & engineering law.<br><br>
+                        Her post-admission years have been marked by invaluable experiences that have sharpened her skills and deepened her understanding of the legal landscape.  Her legal acumen has been honed through years of specialising in the intricate fields of commercial law, employment law and construction & engineering law.<br><br>
                         In the dynamic realm of commercial law, she has navigated complex transactions and provided strategic counsel to businesses. In employment law, she has assisted in reviewing and drafting employment contracts and representing clients in cases of unjust dismissal, wrongful termination, and employment-related disputes.  The domain of construction & engineering law has seen her adept negotiation skills, ensuring the seamless execution of contracts and regulatory compliance.<br><br>
-                        In embracing the ethos of lifelong learning, she stays at the forefront of legal developments, ensuring that her clients benefit from the latest insights, strategies, and innovative legal solutions.  As the Founder and Principal Attorney of Bare Eagler Attorneys, she is dedicated to providing unparalleled legal services, guided by principles of integrity, excellence, and client-centricity. -->
+                        In embracing the ethos of lifelong learning, she stays at the forefront of legal developments, ensuring that her clients benefit from the latest insights, strategies, and innovative legal solutions.  As the Founder and Principal Attorney of Bare Eagler Attorneys, she is dedicated to providing unparalleled legal services, guided by principles of integrity, excellence, and client-centricity.
                     </p>
                     <button class="read-more" id="people_read-more">READ MORE &#8594</button><br>
                 </section>
@@ -210,19 +211,12 @@
                             <i class="fa-brands fa-x-twitter"></i>
                             <i class="fa-brands fa-instagram"></i>
                         </div>
-                    </section><br><br>
+                    </section><br><br><br>
                 </section>
             </section>
-            <nav>
-                <span id="close">X</span>
-                <li>HOME</li>
-                <li>SERVICES</li>
-                <li>VISION</li>
-                <li>PEOPLE</li>
-                <li>CONTACT</li>
-            </nav>
         </section>
         <footer>Copyright @ 2023. All rights reserved.</footer>
     </section>
+    <script src="index.js"></script>
 </body>
 </html>
