Activate nav links and hide navbar when redirected to selected page

--- a/index.html
+++ b/index.html
@@ -18,11 +18,11 @@
             <span class="material-symbols-outlined" id="menu">menu</span>
             <nav id="nav">
                 <span id="close">X</span>
-                <li>HOME</li>
-                <li>SERVICES</li>
-                <li>VISION</li>
-                <li>PEOPLE</li>
-                <li>CONTACT</li>
+                <li><a href="#">HOME</a></li>
+                <li><a href="#services">SERVICES</a></li>
+                <li><a href="#about">ABOUT</a></li>
+                <li><a href="#people">PEOPLE</a></li>
+                <li><a href="#contact">CONTACT</a></li>
             </nav>
         </header>
         <section id="landing_section">
@@ -32,7 +32,7 @@
                 <h5>A 100% black female owned boutique law firm</h5>
             </div>
         </section>
-        <section class="services">
+        <section class="services" id="services">
             <div class="title">
                 <h2>Our <br><span class="color">Services</span></h2>
                 <img src="img/BEA.jpg" class="bea-image" alt="bea-image">
@@ -154,7 +154,7 @@
                 </div>
             </div>
         </section>
-        <section class="about">
+        <section class="about" id="about">
             <img src="img/hammer2.jpg" class="justice_image" alt="justice-hammer-image">
             <div class="title" id="about_title">
                 <h2>About <br><span class="color">Us</span></h2>
@@ -169,7 +169,7 @@
                 <h1>Our mission</h1>
                 <p>BEA is centered around its clients and guided by its unwavering integrity to provide unparalleled legal services through timely, effective, and ethical legal solutions. At the heart of BEA's legal practice is an unwavering commitment to excellence. Each case is approached with meticulous attention to detail, strategic thinking, and a passion for achieving optimal outcomes for clients.</p>
             </section>
-            <section class="people">
+            <section class="people" id="people">
                 <div class="title">
                     <h2>Our <br><span class="color">People</span></h2>
                     <img src="img/BEA.jpg" class="bea-image" alt="justice-hammer-image">
@@ -192,7 +192,7 @@
                     </p>
                     <button class="read-more" id="people_read-more">READ MORE &#8594</button><br>
                 </section>
-                <section class="contact">
+                <section class="contact" id="contact">
                     <div class="title">
                         <h2>Contact <br><span class="color">Us</span></h2>
                         <img src="img/BEA.jpg" class="bea-image" alt="justice-hammer-image">
