Fix home link redirection

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                 <li><a href="#contact">CONTACT</a></li>
             </nav>
         </header>
-        <section id="landing_section">
+        <section id="landing_section" id="#">
             <img src="img/Justice.jpg" class="justice_image" alt="justice_image">
             <div id="overlay">
                 <h2>Bare Eagler Attorneys</h2>
