Add layout for the landing page for larger devices

--- a/index.html
+++ b/index.html
@@ -25,12 +25,12 @@
                 <li><a href="#contact">CONTACT</a></li>
             </nav>
         </header>
-        <section id="landing_section" id="#">
-            <img src="img/Justice.jpg" class="justice_image" alt="justice_image">
+        <section class="landing_section" id="#">
             <div id="overlay">
                 <h2>Bare Eagler Attorneys</h2>
                 <h5>A 100% black female owned boutique law firm</h5>
             </div>
+            <img src="img/Justice.jpg" class="justice_image" alt="justice_image">
         </section>
         <section class="services" id="services">
             <div class="title">
