Reposition h1 title when read more button is clicked

--- a/index.html
+++ b/index.html
@@ -74,9 +74,10 @@
                         <dd>Expertise in overseeing contracts throughout their lifecycle, ensuring legal compliance and effective execution.</dd>
                     </p>
                 </dl>
-                <button class="read-more" id="more-services">READ MORE &#8594</button>
+                </div>
+                <button class="read-more" id="more-services">READ MORE &#8594</button><br>
                 <div id="specialisation">
-                    <h1>SPECIALISATION & FOCUS</h1>
+                    <h1 id="specialisation_title">SPECIALISATION & FOCUS</h1>
                     <p>Employment and Labour Law</p>
                     <ul>
                         <li>Employee Rights: Addressing issues related to wages, working hours, discrimination, harassment, and workplace safety.</li>
