--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         </header>
         <section class="landing_section" id="#">
             <div id="overlay">
-                <h2>Bare Eagler Attorneys</h2>
+                <h1>ATTORNEYS-AT-LAW</h1>
                 <h5>A 100% black female owned boutique law firm</h5>
             </div>
             <img src="img/Justice.jpg" class="justice_image" alt="justice_image">
