Change images and add quote

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                 <h1>ATTORNEYS-AT-LAW</h1>
                 <h5>A 100% black female owned boutique law firm</h5>
             </div>
-            <img src="img/Justice.jpg" class="justice_image" alt="justice_image">
+            <img src="img/buildings.jpg" class="justice_image" alt="justice_image">
         </section>
         <section class="services" id="services">
             <div class="title">
@@ -189,7 +189,13 @@
             </div>
         </section>
         <section class="about" id="about">
-            <img src="img/hammer2.jpg" class="justice_image" alt="justice-hammer-image">
+            <div class="breaker">
+                <p id="quote">
+                    <q>A lawyer is a person who writes a 10000-word document and calls it a brief</q><br><br>
+                    <span>~ Franz Kafka</span>
+                </p>
+                <img src="img/Justice.jpg" class="justice_image" alt="justice-hammer-image">
+            </div>
             <div class="title" id="about_title">
                 <h2>About <br><span class="color">Us</span></h2>
                 <img src="img/BEA.jpg" class="bea-image" alt="justice-hammer-image">
