Add newspaper image

--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@
                     <q>A lawyer is a person who writes a 10000-word document and calls it a brief</q><br><br>
                     <span>~ Franz Kafka</span>
                 </p>
-                <img src="img/Justice.jpg" class="justice_image" alt="justice-hammer-image">
+                <img src="img/Justice2.jpg" class="justice_image" alt="justice-hammer-image">
             </div>
             <div class="title" id="about_title">
                 <h2>About <br><span class="color">Us</span></h2>
@@ -204,7 +204,7 @@
                 <div class="about_body-content">
                     <h1>Who we are</h1>
                     <p>
-                        Bare Eagler Attorneys (BEA) is a 100% black female owned boutique law firm headquartered in Johannesburg, South Africa.<br><br>The firm is led by Eagler Bare, a duly experienced and admitted attorney of the High Court of South Africa who is supported by seasoned legal consultants with over a decade of experience for in-depth insights and effective solutions.</p>
+                        Bare Eagler Attorneys (BEA) is a 100% black female owned boutique law firm headquartered in Johannesburg, South Africa. The firm is led by Eagler Bare, a duly experienced and admitted attorney of the High Court of South Africa who is supported by seasoned legal consultants with over a decade of experience for in-depth insights and effective solutions.</p>
                     <h1>Our values</h1>
                     <p>Client-Centricity, Integrity, Collaboration and Excellence.</p>
                     <h1>Our mission</h1>
@@ -241,22 +241,27 @@
                         <h2>Contact <br><span class="color">Us</span></h2>
                         <img src="img/BEA.jpg" class="bea-image" alt="justice-hammer-image">
                     </div>
-                    <section class="contact_body">
-                        <h1 style="font-size: 1em;">Reach us on</h1>
-                        <div class="contact_icons">
-                            <p><i class="fa-solid fa-phone"></i><span class="space">+27 83 208 1665</span></p>
-                            <p><i class="fa-solid fa-envelope"></i><span class="space">info@ebattorneys.co.za </span></p>
-                            <p><i class="fa-solid fa-envelope"></i><span class="space">eagler@ebattorneys.co.za</span></p>
-                        </div>    
-                    </section>
-                    <section class="socials">
-                        <div class="social_icons">
-                            <i class="fa-brands fa-facebook"></i>
-                            <i class="fa-brands fa-linkedin"></i>
-                            <i class="fa-brands fa-x-twitter"></i>
-                            <i class="fa-brands fa-instagram"></i>
+                    <div class="contact_container">
+                        <div id="contact-logo-container">
+                            <img src="img/newspaper.jpg" alt="logo" id="contact-logo">
                         </div>
-                    </section><br><br><br>
+                        <div class="wrapper">
+                            <section class="contact_body">
+                                <h1 style="font-size: 1em;">Reach us on</h1>
+                                <div class="contact_icons">
+                                    <p><i class="fa-solid fa-phone"></i><span class="space">+27 83 208 1665</span></p>
+                                    <p><i class="fa-solid fa-envelope"></i><span class="space">info@ebattorneys.co.za </span></p>
+                                    <p><i class="fa-solid fa-envelope"></i><span class="space">eagler@ebattorneys.co.za</span></p>
+                                </div>    
+                            </section>
+                            <section class="socials">
+                                <i class="fa-brands fa-facebook"></i>
+                                <i class="fa-brands fa-linkedin"></i>
+                                <i class="fa-brands fa-x-twitter"></i>
+                                <i class="fa-brands fa-instagram"></i>
+                            </section><br><br>
+                        </div>   
+                    </div>
                 </section>
             </section>
         </section>
