Change newspaper image to law image

--- a/index.html
+++ b/index.html
@@ -243,7 +243,8 @@
                     </div>
                     <div class="contact_container">
                         <div id="contact-logo-container">
-                            <img src="img/newspaper.jpg" alt="logo" id="contact-logo">
+                            <div class="cover"></div>
+                            <img src="img/law.jpg" alt="logo" id="contact-logo">
                         </div>
                         <div class="wrapper">
                             <section class="contact_body">
