Fix pdf feel of specialisation section

--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
             <h1 id="specialisation_title">SPECIALISATION & FOCUS</h1>
             <div id="specialisation">
                 <div class="services_body">
-                    <div class="specific">
+                    <div class="specifics">
                         <p>Employment and Labour Law</p>
                         <ul>
                             <li>Employee Rights: Addressing issues related to wages, working hours, discrimination, harassment, and workplace safety.</li>
@@ -88,7 +88,7 @@
                             <li>Wrongful Termination: Representing clients in cases of unjust dismissal, wrongful termination, and employment-related disputes.</li>
                         </ul>
                     </div>
-                    <div class="specific">
+                    <div class="specifics">
                             <p>Commercial Law</p>
                         <ul>
                             <li>Contracts: Drafting, reviewing, and negotiating contracts for various business transactions, including sales, partnerships, and service agreements.</li>
@@ -96,7 +96,7 @@
                             <li>Commercial Litigation: Handling disputes arising from commercial transactions, including breach of contract, fraud, and other business-related conflicts.</li>
                         </ul>
                     </div>
-                    <div class="specific">
+                    <div class="specifics">
                         <p>Construction Law</p>
                         <ul>
                             <li>Contract Negotiation: Assisting in the negotiation and drafting of construction contracts, including those between owners, contractors, and subcontractors.</li>
@@ -105,7 +105,7 @@
                             <li>Construction Defects: Addressing legal matters related to construction defects, warranties, and liability for faulty workmanship.</li>
                         </ul> 
                     </div>
-                    <div class="specific">
+                    <div class="specifics">
                         <p>Wills & Deceased Estates</p>
                         <ul>
                             <li>Estate Planning: Drafting Wills: Preparing legal documents that outline the distribution of a person's assets and the appointment of guardianship for minor children.</li>
@@ -116,71 +116,73 @@
                         </ul>
                     </div>
                 </div>
-                <p>Contract Administration</p>
-                <span>Contract administration a multifaceted and crucial aspect of business operations.  It involves the management and oversight of contracts throughout their lifecycle, from creation to completion. It is a critical aspect of ensuring that contractual agreements are executed efficiently, legally, and in a manner that aligns with the interests of all parties involved.<br><br>Bare Eagler Attorneys can help you with effective contract administration in order for your business to maintain positive relationships and minimize the potential for disputes. We pay attention to detail and have a thorough understanding of legal and business considerations.<br><br>Our tailored contract administration involves:<br><br></span>
+                <div class="contract">
+                    <p>Contract Administration</p>
+                    <span>Contract administration a multifaceted and crucial aspect of business operations.  It involves the management and oversight of contracts throughout their lifecycle, from creation to completion. It is a critical aspect of ensuring that contractual agreements are executed efficiently, legally, and in a manner that aligns with the interests of all parties involved.<br><br>Bare Eagler Attorneys can help you with effective contract administration in order for your business to maintain positive relationships and minimize the potential for disputes. We pay attention to detail and have a thorough understanding of legal and business considerations.<br><br>Our tailored contract administration involves:<br><br></span>
+                </div>
                 <div class="services_body">
                     <div class="specific">
-                        <p>Contract Creation :</p>
+                        <p>Contract Creation</p>
                         <ul>
                             <li>Drafting - The initial creation of a contract, which involves clearly articulated the terms, conditions, and obligations of each party. This phase requires careful consideration of legal requirements and potential risks.</li>
                         </ul>
                     </div>
                     <div class="specific">
-                        <p>Negotiation :</p>
+                        <p>Negotiation</p>
                         <ul>
                             <li>Review and Amendments: Parties may propose changes to the initial draft. We facilitate these discussions, ensuring that modifications align with the interests of all parties.</li>
                         </ul>
                     </div>
                     <div class="specific">
-                        <p>Execution :</p>
+                        <p>Execution</p>
                         <ul>
                             <li>Signing and Authorization: Once both parties agree to the terms, the contract is signed and authorized. We ensure that all required signatures are obtained.</li>
                         </ul>
                     </div>
                     <div class="specific">
-                        <p>Record Keeping :</p>
+                        <p>Record Keeping</p>
                         <ul>
                             <li>Document Management: We maintain a comprehensive record of all contracts, including versions, amendments, and related correspondence. This ensures easy access to information and helps in monitoring compliance.</li>
                         </ul>
                     </div>
                     <div class="specific">
-                        <p>Communication :</p>
+                        <p>Communication</p>
                         <ul>
                             <li>Stakeholder Communication: We facilitate communication between involved parties, ensuring that everyone is aware of their responsibilities and any changes to the agreement.</li>
                         </ul> 
                     </div>
                     <div class="specific">
-                        <p>Compliance Monitoring :</p>
+                        <p>Compliance Monitoring</p>
                         <ul>
                             <li>Ongoing Oversight: Throughout the contract's duration, we monitor compliance with the terms and conditions outlined in the agreement. This includes tracking deadlines, deliverables, and performance metrics.</li>
                         </ul>
                     </div>
                     <div class="specific">
-                            <p>Issue Resolution :</p>
+                            <p>Issue Resolution</p>
                         <ul>
                             <li>Conflict Resolution: We address any issues or disputes that may arise during the execution of the contract. This involves finding solutions that align with the terms of the agreement.</li>
                         </ul>
                     </div>
                     <div class="specific">
-                        <p>Performance Evaluation :</p>
+                        <p>Performance Evaluation</p>
                         <ul>
                             <li>Assessment of Deliverables: we can assist with evaluating the quality and timeliness of deliverables and services provided under the contract. This assessment informs our clients of future decisions and potential renewals.</li>
                         </ul>
                     </div>
                     <div class="specific">
-                        <p>Contract Amendments :</p>
+                        <p>Contract Amendments</p>
                         <ul>
                             <li>Changes to the Agreement: If circumstances change, we can facilitate amendments to the contract to reflect the new reality while protecting the interests of all parties.</li>
                         </ul>
                     </div>
                     <div class="specific">
-                        <p>Contract Closeout :</p>
+                        <p>Contract Closeout</p>
                         <ul>
                             <li>Finalisation: Once all obligations are met, we can assist in overseeing the formal closure of the contract. This includes ensuring that all deliverables are received, payments are made, and any required documentation is completed.</li>
                         </ul>
                     </div>
                     <div class="specific">
-                        <p>Risk Management :</p>
+                        <p>Risk Management</p>
                         <ul>
                             <li>Identification and Mitigation: We actively identify and address potential risks associated with a contract. This involves implementing strategies to mitigate risks and ensure that the contract remains legally and operationally sound.</li>
                         </ul>
